<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">XMPP for Android</string>
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="roster">Roster</string>
	<string name="send">Send</string>
	<string name="chat">Chat</string>
	<string name="all_contacts">All Contacts</string>
	<string name="online_contacts">Online Contacts</string>
	<string name="conferences">Conferences</string>
	<string name="conference">Conference</string>
	<string name="groups">Groups</string>
	<string name="datelayout_daymonth">MMM, dd</string>
	<string name="process_loading">Loading…</string>
	<string name="process_initializing">Initializing…</string>
	<string name="process_connecting">Connecting…</string>
	<string name="process_logging_in">Signing in…</string>
	<string name="process_loading_roster">Loading Roster…</string>
	<string name="type_message">Type message</string>
	<string name="status_available">Available</string>
	<string name="status_offline">Offline</string>
	<string name="status_away">Away</string>
	<string name="status_idle">Idle</string>
	<string name="status_busy">Busy</string>
	<string name="status_invisible">Invisible</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="me">Me</string>
	<string name="done">Done</string>
	<string name="disconnect">Disconnect</string>
	<string name="add_contact">Add Contact</string>
	<string name="add_conference">Add Conference</string>
	<string name="change_status">Change Status</string>
	<string name="close">Close</string>
	<string name="call">Call</string>
	<string name="nickname">Nickname</string>
	<string name="userjid">User\'s JID</string>
	<string name="conferencejid">Conference\'s JID</string>
	<string name="conferencename">Conference\'s Name</string>
	<string name="select_status">Select Status</string>
	<string name="custom_status_message">Custom Status Message</string>
	<string name="auto_login">Auto login</string>
	<string name="add_account">Add Account</string>
	<string name="search">Search</string>
	<string name="sign_in">Sign in</string>
	<string name="sign_out">Sign out</string>
	<string name="display_options">Display options</string>
	<string name="settings">Settings</string>
	<string name="help">Help</string>
	<string name="send_feedback">Send feedback</string>
	<string name="add_user_desc">Send chat invitation to</string>
	<string name="add_conference_desc">Join chat conference</string>
	<string name="jid_is_required">JID is required</string>
	<string name="auto_join">Auto Join</string>
	<string name="status">Status</string>

</resources>