<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_search" android:title="@string/search" android:showAsAction="ifRoom|collapseActionView" android:actionViewClass="android.widget.SearchView" android:icon="@android:drawable/ic_menu_search"></item><item
        android:id="@+id/menu_add_user"
        android:icon="@drawable/ic_add_contact_holo_dark"
        android:showAsAction="ifRoom"
        android:title="@string/add_contact"/>
    <item
        android:id="@+id/menu_add_conference"
        android:icon="@drawable/ic_add_group_holo_dark"
        android:showAsAction="ifRoom"
        android:visible="true"
        android:title="@string/add_conference"/>
    <item android:id="@+id/menu_display_options" android:title="@string/display_options" android:showAsAction="never"></item><item
        android:id="@+id/menu_sign_out"
        android:showAsAction="never"
        android:title="@string/sign_out"/>
    
    
    <item android:id="@+id/menu_settings" android:title="@string/settings" android:showAsAction="never"></item><item
        android:id="@+id/menu_help"
        android:showAsAction="never"
        android:title="@string/help">
    </item>
    <item
        android:id="@+id/menu_send_feedback"
        android:showAsAction="never"
        android:title="@string/send_feedback">
    </item>

</menu>