<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_conference_desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/jid_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_row_margin"
        android:hint="@string/conferencejid"
        android:singleLine="false" >
    </EditText>

    <EditText
        android:id="@+id/nick_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_row_margin"
        android:hint="@string/conferencename"
        android:singleLine="true" >
    </EditText>
    
    <EditText
        android:id="@+id/mynick_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_row_margin"
        android:hint="@string/nickname"
        android:singleLine="true" >
    </EditText>
    
    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_row_margin"
        android:hint="@string/password"
        android:singleLine="false" >
    </EditText>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/simple_row_margin"
        android:text="@string/auto_login" />

</LinearLayout>